# ds4rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DeepSeek_V4-glm51.md  DeepSeek_V4.md  Makefile  README.md  TODO.md  build.rs
benchmarks/: bench_cpu_ffn.py  bench_fp4_iq2xs_gpu.py  bench_mixed_quant_ffn.py  bench_prefetch_layers.py  test_cpu_fp4_iq2xs.py  test_hot_cold_expert.py
calibration/: data.txt
csrc/: iq2_xs.cu  iq2_xs.cuh  iq2_xs.h  iq2_xs_bridge.c  iq2_xs_quantize.cu
docs/: 20260523-p1s1.md  20260523-p5.md  cpu-ffn-kimi.md  cuda_quantize.md  iq2xs_inference_report.md  tilelang_kernel_api.md  trae_dev_guide.md
encoding/: encoding_dsv4.py  test_encoding_dsv4.py
inference/: convert.py  convert_iq2xs_to_gguf.py  cpu_expert.py  expert_cache.py  extract_experts_from_gguf.py  fp4_compression.py  generate.py  generate_imatrix.py  gguf_iq2xs.py  iq2xs_archive.py  iq2xs_c_wrapper.py  iq2xs_cuda_quant.py  iq2xs_gemm.py  iq2xs_gemm_tilelang.py  kernel.py  kmap_iq2xs.npy  l3_pool.py  low_rank_decomposition.py  model.py  prequant_iq2xs.py  prequant_iq2xs_gguf.py  prequant_mixed_iq2xxs_q2k.py  quantize_iq2xs_gpu_optimized.py  route_simd.py  rust_cpu_expert.py  test_cpu_expert.py  test_iq2xxs_kernel.py  test_iq2xxs_q2k_inference.py  test_mixed_quant.py  test_p0_avx512.py  test_p0_ffn.py  test_p1_dispatch.py  test_p1_hybrid.py  test_rust_integration.py  tile_layout.py  verify_archive_iq2xs.c  verify_gguf_iq2xs.c
misc/: bench_6experts.py  bench_cpu_ffn.py  profile_cpu_ffn.py
src/: cache.rs  compressor.rs  config.rs  cublas.rs  dlpack.rs  dtype.rs  expert.rs  (+17 more)
(+59 files in other folders)
